# nbdev2example

./: README.md  pyproject.toml  settings.ini
.github/workflows/: deploy.yaml  test.yaml
nbs/: _quarto.yml  getting_started.ipynb  index.ipynb  sidebar.yml
